# template

./: .editorconfig  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  git-backup.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml
src/mypackage/: __init__.py  example.py
tests/: conftest.py  test_example.py
